Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
                         let y = 35;
                         let x = 20; 
                         const cellWidth = 85; 
-                        const cellHeight = 85;
-                        const margin = 10;
+                        const cellHeight = 76.5; // Diminuído em 10%
+                        const margin = 5; // Reduzido em 50%
                         const cellPadding = 2;
                         
                         imageDatas.forEach((imageData, index) => {
