Atualizar o index.html
adicionada logomarca

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             margin: 0 auto;
         }
         
+        .header-logo {
+            max-width: 150px; /* Tamanho da logomarca */
+            margin-bottom: 10px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        
         .header-title {
             font-size: 24px;
             font-weight: 600;
@@ -83,7 +91,7 @@
         }
 
         .header-title i {
-            margin-right: 10px; /* Adicionado espaçamento para o ícone */
+            margin-right: 10px;
         }
 
         .header-subtitle {
@@ -336,6 +344,7 @@
 
     <div class="container">
         <header>
+            <img src="https://i.ibb.co/JFSDTT6J/logo-cetep-lnab-100kb.png" alt="Logomarca do CETEP" class="header-logo">
             <h1 class="header-title"><i class="fas fa-book-open"></i>Sistema de Envio das Fotos do Diário de Bordo</h1>
             <p class="header-subtitle">Organize e compartilhe as atividades acadêmicas com facilidade</p>
         </header>
