--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
     <div class="container">
         <header>
-            <img src="https://raw.githubusercontent.com/hyskal/diario-de-bordo-cetep/refs/heads/main/public/logo-cetep-lnab.png" alt="Logomarca do CETEP" class="header-logo">
+            <img src="/logo-cetep-lnab.png" alt="Logomarca do CETEP" class="header-logo">
             <h1 class="header-title"><i class="fas fa-book-open"></i>Sistema de Envio das Fotos do Diário de Bordo</h1>
             <p class="header-subtitle">Organize e compartilhe as atividades acadêmicas com facilidade</p>
         </header>
