--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </div>
                 <div class="form-group">
                     <label for="turma">Turma</label>
-                    <input type="text" id="turma" class="input-field" placeholder="Ex: 3º Ano A">
+                    <input type="text" id="turma" class="input-field" placeholder="Ex: 3TACM1">
                 </div>
                 <div class="form-group">
                     <label for="email">E-mail do Responsável</label>
